--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,26 @@
 /config/secrets.yml
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Ignore .env file
-./.env
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -47,3 +65,23 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 # See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
